--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <link>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>AiDen - Your Personal AI Assistant</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="app">
+      <div id="chat_container"></div>
+
+      <form>
+        <textarea name="prompt" rows="1" cols="1" placeholder="Ask AiDen"></textarea>
+        <button type="submit"><img src="assets/send.svg" /></button>
+      </form>
+    </div>
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
